--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "technical-test",
   "version": "0.1.0",
+  "author": {
+    "name": "Antroine",
+    "email": "tahindrazaeleo@gmail.com"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
